src/test/deca/context/invalid/our_tests/jb-doubleDefClass.deca
// Description:
//    Double definition of a class
//
// Resultats:
//    Should throw a contextual error (rule 1.3)
//
// Historique:
//    cree le 22/01/2017

class A {
}

class A extends A {
}
